--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 .custom-tooltip {
-  position: absolute;
+  /*position: absolute;*/
   height: 30px;
   overflow: hidden;
   pointer-events: none;
